--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@
 body{
     font-family: 'Inter', sans-serif;
 }
+.react-calendar {
+    border: none !important;
+    background: #fff;
+    box-shadow: 3px 4px 10px 2px rgba(0, 0, 0, 0.05);
+    padding: 10px;
+}
