--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*  */
+.booking-time-btn{
+    @apply text-base font-medium border border-[#40d0c6] text-[#40d0c6] px-10 py-2 rounded-md 
+    hover:bg-[#40d0c6] hover:text-white duration-500 mb-2
+}
